Daniel fixes fonts in mobile view and alignment of slider images in workshop page

--- a/frontend/css/categories-devices.css
+++ b/frontend/css/categories-devices.css
@@ -631,6 +631,8 @@ main {
   height: 100%;
   padding-top: 0.5rem;
   background-color: rgb(132, 132, 132);
+  font-family: 'Raleway';
+
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 5px solid rgb(255, 51, 0); */
